--- a/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/dokuwiki/app/helmrelease.yaml
@@ -63,7 +63,7 @@ spec:
     route:
       app:
         hostnames:
-          - "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - "{{ .Release.Name }}.wyde.network"
         parentRefs:
           - name: envoy-internal
             namespace: network
