--- a/kubernetes/apps/self-hosted/nextcloud/app/httproute.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/httproute.yaml
@@ -6,7 +6,7 @@ metadata:
   name: nextcloud
 spec:
   hostnames:
-    - nextcloud.${SECRET_DOMAIN}
+    - nextcloud.wyde.network
   parentRefs:
     - name: envoy-internal
       namespace: network
