--- a/kubernetes/apps/storage/democratic-csi/iscsi/externalsecret.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
           driver: freenas-api-iscsi
           httpConnection:
             protocol: https
-            host: nas.${SECRET_DOMAIN}
+            host: nas.wyde.network
             port: 443
             apiKey: {{ .TRUENAS_API_KEY }}
             allowInsecure: false
@@ -30,7 +30,7 @@ spec:
             zvolEnableReservation: false
             zvolBlocksize: 16K
           iscsi:
-            targetPortal: "nas.${SECRET_DOMAIN}:3260"
+            targetPortal: "nas.wyde.network:3260"
             nameTemplate: "{{`{{ parameters.[csi.storage.k8s.io/pvc/namespace] }}`}}-{{`{{ parameters.[csi.storage.k8s.io/pvc/name] }}`}}"
             namePrefix: ""
             nameSuffix: ""
