--- a/kubernetes/apps/database/cloudnative-pg/cluster/objectstore.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/objectstore.yaml
@@ -8,7 +8,7 @@ spec:
     data:
       compression: bzip2
     destinationPath: s3://cloudnative-pg/
-    endpointURL: https://s3.${SECRET_DOMAIN}
+    endpointURL: https://s3.wyde.network
     s3Credentials:
       accessKeyId:
         name: &name cloudnative-pg-secret
