--- a/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/pinchflat/app/helmrelease.yaml
@@ -70,14 +70,14 @@ spec:
           - path: /etc/yt-dlp
       downloads:
         type: nfs
-        server: nas.${SECRET_DOMAIN}
+        server: nas.wyde.network
         path: /mnt/hdd-media/Media
         globalMounts:
           - path: /downloads
     route:
       app:
         hostnames:
-          - "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - "{{ .Release.Name }}.wyde.network"
         parentRefs:
           - name: envoy-internal
             namespace: network
