--- a/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -221,15 +221,15 @@ spec:
             readOnly: true
       media:
         type: nfs
-        server: nas.${SECRET_DOMAIN}
+        server: nas.wyde.network
         path: /mnt/hdd-media/Media
         globalMounts:
           - path: /data
     route:
       app:
         hostnames:
-          - "{{ .Release.Name }}.${SECRET_DOMAIN}"
-          - qbit.${SECRET_DOMAIN}
+          - "{{ .Release.Name }}.wyde.network"
+          - qbit.wyde.network
         parentRefs:
           - name: envoy-internal
             namespace: network
