--- a/kubernetes/apps/kube-system/cilium/config/vip.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/vip.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: kube-vip
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: home-k8s.${SECRET_DOMAIN}
+    external-dns.alpha.kubernetes.io/hostname: home-k8s.wyde.network
     lbipam.cilium.io/ips: 192.168.20.20
 spec:
   type: LoadBalancer
