--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
         main:
           enabled: true
           hostnames:
-            - alertmanager.${SECRET_DOMAIN}
+            - alertmanager.wyde.network
           parentRefs:
             - name: envoy-internal
               namespace: network
@@ -33,7 +33,7 @@ spec:
           name: alertmanager
           global:
             resolveTimeout: 5m
-        externalUrl: https://alertmanager.${SECRET_DOMAIN}
+        externalUrl: https://alertmanager.wyde.network
         resources:
           requests:
             cpu: 10m
@@ -99,7 +99,7 @@ spec:
               targetLabel: kubernetes_node
             - action: replace
               regex: (.*)
-              replacement: $1.${SECRET_DOMAIN}:9100
+              replacement: $1.wyde.network:9100
               sourceLabels:
                 - kubernetes_node
               targetLabel: instance
@@ -128,13 +128,13 @@ spec:
         main:
           enabled: true
           hostnames:
-            - prometheus.${SECRET_DOMAIN}
+            - prometheus.wyde.network
           parentRefs:
             - name: envoy-internal
               namespace: network
               sectionName: https
       prometheusSpec:
-        externalUrl: https://prometheus.${SECRET_DOMAIN}
+        externalUrl: https://prometheus.wyde.network
         version: v2.55.1 # Override 'unsupported Prometheus version' error.
         image:
           registry: docker.io
