--- a/kubernetes/apps/utilities/it-tools/app/helmrelease.yaml
+++ b/kubernetes/apps/utilities/it-tools/app/helmrelease.yaml
@@ -65,7 +65,7 @@ spec:
     route:
       app:
         hostnames:
-          - "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - "{{ .Release.Name }}.wyde.network"
         parentRefs:
           - name: envoy-internal
             namespace: network
