--- a/kubernetes/components/volsync/externalsecret.yaml
+++ b/kubernetes/components/volsync/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
         ## Volsync
-        RESTIC_REPOSITORY: "s3:https://s3.${SECRET_DOMAIN}/volsync/${APP}"
+        RESTIC_REPOSITORY: "s3:https://s3.wyde.network/volsync/${APP}"
         RESTIC_PASSWORD: "{{ .RESTIC_PASSWORD }}"
   dataFrom:
     - extract:
