--- a/kubernetes/apps/self-hosted/immich/ks.yaml
+++ b/kubernetes/apps/self-hosted/immich/ks.yaml
@@ -14,16 +14,17 @@ spec:
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
-    - name: democratic-csi-iscsi
-      namespace: storage
     - name: dragonfly-cluster
       namespace: database
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
   interval: 1h
   path: ./kubernetes/apps/self-hosted/immich/app
   postBuild:
     substitute:
       APP: *app
-      PVC_CAPACITY: 100Gi
+      PVC_CAPACITY: 20Gi
+      PVC_STORAGECLASS: ceph-block
   prune: true
   retryInterval: 2m
   sourceRef:
