chore(cnpg): correct oci repo

--- a/kubernetes/apps/database/cloudnative-pg/barman-cloud/kustomization.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/barman-cloud/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
   - https://raw.githubusercontent.com/cloudnative-pg/plugin-barman-cloud/refs/tags/v0.7.0/config/crd/bases/barmancloud.cnpg.io_objectstores.yaml
   - ./certificate.yaml
   - ./helmrelease.yaml
+  - ./ocirepository.yaml
   - ./rbac.yaml
