--- a/kubernetes/apps/downloads/kustomization.yaml
+++ b/kubernetes/apps/downloads/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: downloads
 components:
-  - ../../components/common
+  - ../../components/namespace
 resources:
   # Flux-Kustomizations
   # - ./pinchflat/ks.yaml
