--- a/kubernetes/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/apps/external-secrets/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: external-secrets
 components:
-  - ../../components/common
+  - ../../components/namespace
 resources:
   # Flux-Kustomizations
   - ./external-secrets/ks.yaml
