--- a/kubernetes/apps/openebs-system/kustomization.yaml
+++ b/kubernetes/apps/openebs-system/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: openebs-system
 components:
-  - ../../components/common
+  - ../../components/namespace
 resources:
   # Flux-Kustomizations
   - ./openebs/ks.yaml
