--- a/kubernetes/apps/utilities/kustomization.yaml
+++ b/kubernetes/apps/utilities/kustomization.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: utilities
 components:
-  - ../../components/common
+  - ../../components/namespace
 resources:
   # Flux-Kustomizations
   - ./atuin/ks.yaml
