chore(qbit): modify addons persistence settings

--- a/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/app/helmrelease.yaml
@@ -133,6 +133,8 @@ spec:
     persistence:
       addons:
         type: emptyDir
+        globalMounts:
+          - path: /addons
       config:
         existingClaim: "{{ .Release.Name }}"
       media:
