--- a/kubernetes/components/volsync/pvc.yaml
+++ b/kubernetes/components/volsync/pvc.yaml
@@ -5,12 +5,12 @@ metadata:
   name: ${APP}
 spec:
   accessModes:
-    - ${VOLSYNC_ACCESSMODES:-ReadWriteOnce}
+    - ${VOLSYNC_ACCESSMODES:=ReadWriteOnce}
   dataSourceRef:
     kind: ReplicationDestination
     apiGroup: volsync.backube
     name: ${APP}
   resources:
     requests:
-      storage: ${VOLSYNC_CAPACITY:-1Gi}
-  storageClassName: ${VOLSYNC_STORAGECLASS:-truenas-ssd-iscsi}
+      storage: ${VOLSYNC_CAPACITY:=1Gi}
+  storageClassName: ${VOLSYNC_STORAGECLASS:=ceph-block}
