Revert "chore: change storage class in pvc & volsync components"
This reverts commit 9e69dc687e795ed2870412354d8c86852e4ab345.

--- a/kubernetes/components/pvc/pvc.yaml
+++ b/kubernetes/components/pvc/pvc.yaml
@@ -5,8 +5,8 @@ metadata:
   name: ${APP}
 spec:
   accessModes:
-    - ${PVC_ACCESSMODES:=ReadWriteOnce}
+    - ${PVC_ACCESSMODES:-ReadWriteOnce}
   resources:
     requests:
-      storage: ${PVC_CAPACITY:=1Gi}
-  storageClassName: ${PVC_STORAGECLASS:=ceph-block}
+      storage: ${PVC_CAPACITY:-1Gi}
+  storageClassName: ${PVC_STORAGECLASS:-truenas-ssd-iscsi}
