--- a/kubernetes/components/volsync/replicationdestination.yaml
+++ b/kubernetes/components/volsync/replicationdestination.yaml
@@ -9,20 +9,20 @@ spec:
     manual: restore-once
   restic:
     accessModes:
-      - ${VOLSYNC_ACCESSMODES:=ReadWriteOnce}
+      - ${VOLSYNC_ACCESSMODES:-ReadWriteOnce}
     cacheAccessModes:
-      - ${VOLSYNC_CACHE_ACCESSMODES:=ReadWriteOnce}
-    cacheCapacity: ${VOLSYNC_CAPACITY:=1Gi}
-    cacheStorageClassName: ${VOLSYNC_CACHE_SNAPSHOTCLASS:=openebs-hostpath}
-    capacity: ${VOLSYNC_CAPACITY:=1Gi}
+      - ${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}
+    cacheCapacity: ${VOLSYNC_CAPACITY:-1Gi}
+    cacheStorageClassName: ${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}
+    capacity: ${VOLSYNC_CAPACITY:-1Gi}
     cleanupCachePVC: true
     cleanupTempPVC: true
     copyMethod: Snapshot
     enableFileDeletion: true
     moverSecurityContext:
-      runAsUser: ${VOLSYNC_PUID:=1000}
-      runAsGroup: ${VOLSYNC_PGID:=1000}
-      fsGroup: ${VOLSYNC_PGID:=1000}
+      runAsUser: ${VOLSYNC_PUID:-1000}
+      runAsGroup: ${VOLSYNC_PGID:-1000}
+      fsGroup: ${VOLSYNC_PGID:-1000}
     repository: ${APP}-volsync-secret
-    storageClassName: ${VOLSYNC_STORAGECLASS:=ceph-block}
-    volumeSnapshotClassName: ${VOLSYNC_SNAPSHOTCLASS:=csi-ceph-blockpool}
+    storageClassName: ${VOLSYNC_STORAGECLASS:-truenas-ssd-iscsi}
+    volumeSnapshotClassName: ${VOLSYNC_SNAPSHOTCLASS:-truenas-ssd-iscsi}
