--- a/kubernetes/components/volsync/replicationsource.yaml
+++ b/kubernetes/components/volsync/replicationsource.yaml
@@ -10,20 +10,20 @@ spec:
     schedule: 0 3 * * *
   restic:
     accessModes:
-      - ${VOLSYNC_ACCESSMODES:=ReadWriteOnce}
+      - ${VOLSYNC_ACCESSMODES:-ReadWriteOnce}
     cacheAccessModes:
-      - ${VOLSYNC_CACHE_ACCESSMODES:=ReadWriteOnce}
-    cacheCapacity: ${VOLSYNC_CAPACITY:=1Gi}
-    cacheStorageClassName: ${VOLSYNC_CACHE_SNAPSHOTCLASS:=openebs-hostpath}
+      - ${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}
+    cacheCapacity: ${VOLSYNC_CAPACITY:-1Gi}
+    cacheStorageClassName: ${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}
     copyMethod: Snapshot
     moverSecurityContext:
-      runAsUser: ${VOLSYNC_PUID:=1000}
-      runAsGroup: ${VOLSYNC_PGID:=1000}
-      fsGroup: ${VOLSYNC_PGID:=1000}
+      runAsUser: ${VOLSYNC_PUID:-1000}
+      runAsGroup: ${VOLSYNC_PGID:-1000}
+      fsGroup: ${VOLSYNC_PGID:-1000}
     pruneIntervalDays: 7
     repository: ${APP}-volsync-secret
     retain:
       daily: 7
       within: 3d
-    storageClassName: ${VOLSYNC_STORAGECLASS:=ceph-block}
-    volumeSnapshotClassName: ${VOLSYNC_SNAPSHOTCLASS:=csi-ceph-blockpool}
+    storageClassName: ${VOLSYNC_STORAGECLASS:-truenas-ssd-iscsi}
+    volumeSnapshotClassName: ${VOLSYNC_SNAPSHOTCLASS:-truenas-ssd-iscsi}
