--- a/kubernetes/apps/network/tailscale-operator/ks.yaml
+++ b/kubernetes/apps/network/tailscale-operator/ks.yaml
@@ -22,6 +22,7 @@ spec:
     name: flux-system
     namespace: flux-system
   targetNamespace: *namespace
+  wait: true
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
