chore(pgadmin): move storage to ceph-block

--- a/kubernetes/apps/database/pgadmin/ks.yaml
+++ b/kubernetes/apps/database/pgadmin/ks.yaml
@@ -14,8 +14,8 @@ spec:
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: *namespace
-    - name: democratic-csi-iscsi
-      namespace: storage
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
       namespace: volsync-system
   interval: 1h
@@ -25,6 +25,8 @@ spec:
       APP: *app
       VOLSYNC_PUID: "5050"
       VOLSYNC_PGID: "5050"
+      VOLSYNC_STORAGECLASS: ceph-block
+      VOLSYNC_SNAPSHOTCLASS: csi-ceph-blockpool
   prune: true
   sourceRef:
     kind: GitRepository
