--- a/kubernetes/apps/network/tailscale-operator/ks.yaml
+++ b/kubernetes/apps/network/tailscale-operator/ks.yaml
@@ -36,7 +36,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: tailscale-operator
-      namespace: network
+      namespace: *namespace
   interval: 1h
   path: ./kubernetes/apps/network/tailscale-operator/connectors
   prune: true
