--- a/kubernetes/apps/network/envoy-gateway/config/config.yaml
+++ b/kubernetes/apps/network/envoy-gateway/config/config.yaml
@@ -21,7 +21,7 @@ spec:
             limits:
               memory: 2Gi
       envoyService:
-        externalTrafficPolicy: Local
+        externalTrafficPolicy: Cluster
   shutdown:
     drainTimeout: 180s
   telemetry:
