--- a/kubernetes/apps/network/envoy-gateway/config/config.yaml
+++ b/kubernetes/apps/network/envoy-gateway/config/config.yaml
@@ -149,7 +149,7 @@ spec:
   #   initialStreamWindowSize: 2Mi
   #   initialConnectionWindowSize: 32Mi
   #   onInvalidMessage: TerminateStream
-  # http3: {}
+  http3: {}
   targetSelectors:
     - group: gateway.networking.k8s.io
       kind: Gateway
