--- a/kubernetes/apps/kube-system/cilium/config/vip.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/vip.yaml
@@ -8,7 +8,7 @@ metadata:
     lbipam.cilium.io/ips: 192.168.20.20
 spec:
   type: LoadBalancer
-  externalTrafficPolicy: Local
+  # externalTrafficPolicy: Local
   selector:
     k8s-app: kube-apiserver
     tier: control-plane
