--- a/kubernetes/apps/kube-system/cilium/config/vip.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/vip.yaml
@@ -4,17 +4,13 @@ kind: Service
 metadata:
   name: kube-vip
   annotations:
-    # external-dns.alpha.kubernetes.io/hostname: home-k8s.wyde.network
+    external-dns.alpha.kubernetes.io/hostname: home-k8s.wyde.network
     lbipam.cilium.io/ips: 192.168.20.20
 spec:
   type: LoadBalancer
-  # externalTrafficPolicy: Local
+  externalTrafficPolicy: Local
   selector:
     k8s-app: kube-apiserver
     tier: control-plane
   ports:
-    # - port: 6443
-    - name: https
-      port: 6443
-      protocol: TCP
-      targetPort: 6443
+    - port: 6443
