--- a/kubernetes/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/kubernetes/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -10,6 +10,8 @@ spec:
     name: openebs
   interval: 1h
   values:
+    preUpgradeHook:
+      enabled: false
     localpv-provisioner:
       localpv:
         image:
