chore(audiobookshelf): move storage to ceph-block

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -7,7 +7,7 @@ components:
   - ../../components/namespace
 resources:
   # Flux-Kustomizations
-  - ./audiobookshelf/ks.yaml
+  # - ./audiobookshelf/ks.yaml
   - ./bazarr/ks.yaml
   - ./jellyfin/ks.yaml
   # - ./jellyseerr/ks.yaml
