chore(jellyfin): move storage to ceph-block

--- a/kubernetes/apps/media/jellyfin/ks.yaml
+++ b/kubernetes/apps/media/jellyfin/ks.yaml
@@ -14,8 +14,8 @@ spec:
   dependsOn:
     - name: amd-device-plugin
       namespace: kube-system
-    - name: democratic-csi-iscsi
-      namespace: storage
+    - name: rook-ceph-cluster
+      namespace: rook-ceph
     - name: volsync
       namespace: volsync-system
   interval: 1h
@@ -24,6 +24,8 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_CAPACITY: 6Gi
+      VOLSYNC_STORAGECLASS: ceph-block
+      VOLSYNC_SNAPSHOTCLASS: csi-ceph-blockpool
   prune: true
   sourceRef:
     kind: GitRepository
