--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -8,8 +8,8 @@ components:
 resources:
   # Flux-Kustomizations
   - ./audiobookshelf/ks.yaml
-  # - ./bazarr/ks.yaml
-  - ./jellyfin/ks.yaml
+  - ./bazarr/ks.yaml
+  # - ./jellyfin/ks.yaml
   # - ./jellyseerr/ks.yaml
   - ./lidarr/ks.yaml
   # - ./navidrome/ks.yaml
