--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -15,6 +15,6 @@ resources:
   # - ./navidrome/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
-  # - ./recyclarr/ks.yaml
-  - ./sonarr/ks.yaml
+  - ./recyclarr/ks.yaml
+  # - ./sonarr/ks.yaml
   - ./unpackerr/ks.yaml
