--- a/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/iscsi/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
     volumeSnapshotClasses:
       - name: truenas-ssd-iscsi
         annotations:
-          snapshot.storage.kubernetes.io/is-default-class: "true"
+          snapshot.storage.kubernetes.io/is-default-class: "false"
         driver: org.democratic-csi.ssd-iscsi
         deletionPolicy: Delete
         parameters:
