--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
         prometheusEndpoint: http://prometheus-operated.observability.svc.cluster.local:9090
       mgr:
         # TODO: Remove prior to multi-node cluster deployment.
-        count: 1
+        # count: 1
         modules:
           - name: diskprediction_local
             enabled: true
@@ -58,8 +58,8 @@ spec:
             enabled: true
       # TODO: Remove prior to multi-node cluster deployment. Ceph needs an odd number of mons. Must
       # run a single mon with a single node.
-      mon:
-        count: 1
+      # mon:
+      #   count: 1
       network:
         provider: host
         connections:
@@ -67,7 +67,7 @@ spec:
       storage:
         useAllNodes: true
         useAllDevices: false
-        devicePathFilter: /dev/disk/by-id/nvme-SAMSUNG_MZQL23T8HCLS-00A07_.*
+        devicePathFilter: /dev/disk/by-id/(nvme-SAMSUNG_MZQL23T8HCLS-00A07_.*|scsi-0QEMU_QEMU_HARDDISK_drive-scsi1)
         config:
           encryptedDevice: "true"
           osdsPerDevice: "1"
@@ -76,8 +76,8 @@ spec:
         spec:
           failureDomain: host
           replicated:
-            # TODO: Change size to 3 prior to multi-node cluster deployment.
-            size: 1
+            # TODO: Change size to 1 prior to single-node cluster deployment.
+            size: 3
         storageClass:
           enabled: true
           name: ceph-block
@@ -109,13 +109,13 @@ spec:
         spec:
           metadataPool:
             replicated:
-              # TODO: Change size to 3 prior to multi-node cluster deployment.
-              size: 1
+              # TODO: Change size to 1 prior to single-node cluster deployment.
+              size: 3
           dataPools:
             - failureDomain: host
               replicated:
-                # TODO: Change size to 3 prior to multi-node cluster deployment.
-                size: 1
+                # TODO: Change size to 1 prior to single-node cluster deployment.
+                size: 3
               name: data0
           metadataServer:
             activeCount: 1
@@ -125,10 +125,10 @@ spec:
               topologySpreadConstraints:
                 - maxSkew: 1
                   topologyKey: kubernetes.io/hostname
-                  # TODO: Change to 'DoNotSchedule' prior to multi-node cluster deployment. Spread
+                  # TODO: Change to 'Schedule' prior to single-node cluster deployment. Spread
                   # constraints are useful in multi-node clusters but harmful on single-node
                   # clusters.
-                  whenUnsatisfiable: Schedule
+                  whenUnsatisfiable: DoNotSchedule
                   labelSelector:
                     matchLabels:
                       app.kubernetes.io/name: ceph-mds
